@@ -1,3 +1,5 @@
+import groovy.json.JsonSlurper
+
 apply plugin: 'wrapper'
 
 if(JavaVersion.current() != JavaVersion.VERSION_1_7){
@@ -22,8 +24,6 @@ allprojects {
   gradle.startParameter.continueOnFailure = true
 
   repositories {
-    maven { url "file://" + rootDir.getAbsolutePath() + "/local-repo" }
-    mavenLocal()
     //maven { url "http://dl.bintray.com/spark-jobserver/maven" }
     jcenter()
     maven { url "https://repository.apache.org/content/repositories/releases" }
@@ -57,7 +57,7 @@ allprojects {
   ext {
     scalaBinaryVersion = '2.10'
     scalaVersion = scalaBinaryVersion + '.6'
-    sparkVersion = '1.5.0-SNAPSHOT.1'
+    sparkVersion = '1.6.0-SNAPSHOT'
     log4jVersion = '1.2.17'
     slf4jVersion = '1.7.12'
     junitVersion = '4.11'
@@ -144,8 +144,8 @@ subprojects {
     // top-level default is single process run since scalatest does not
     // spawn separate JVMs
     maxParallelForks = 1
-    maxHeapSize '1g'
-    jvmArgs '-XX:+HeapDumpOnOutOfMemoryError', '-XX:MaxPermSize=350M', '-ea'
+    maxHeapSize '8g'
+    jvmArgs '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC', '-XX:+CMSPermGenSweepingEnabled',  '-XX:MaxPermSize=4G', '-ea'
     testLogging.exceptionFormat = 'full'
 
     List<String> suites = []
@@ -299,8 +299,9 @@ task generateSources {
 
 task product {
   dependsOn ":snappy-tools_${scalaBinaryVersion}:shadowJar"
+  dependsOn ':snappy-aqp:jar'
   dependsOn ':snappy-examples:jar'
-  
+
   doFirst {
     delete snappyProductDir
     file("${snappyProductDir}/lib").mkdirs()
@@ -327,6 +328,7 @@ task product {
     release << "Build flags: ${buildFlags}\n"
 
     def toolsProject = project(":snappy-tools_${scalaBinaryVersion}")
+    def aqpProject = project(':snappy-aqp')
     def examplesProject = project(':snappy-examples')
     def baseName = 'snappy-spark-assembly'
     def archiveName = "${baseName}_${scalaBinaryVersion}-${version}-hadoop${hadoopVersion}.jar"
@@ -336,6 +338,11 @@ task product {
       into "${snappyProductDir}/lib"
       include "${toolsProject.shadowJar.archiveName}"
       rename { filename -> archiveName }
+    }
+    copy {
+      from("${aqpProject.buildDir}/libs")
+      into "${snappyProductDir}/lib"
+      include "${aqpProject.jar.archiveName}"
     }
     copy {
       from "${examplesProject.buildDir}/libs"
@@ -372,8 +379,12 @@ task product {
       into "${snappyProductDir}/sbin"
     }
     copy {
-      from("${toolsProject.projectDir}/conf") 
+      from("${toolsProject.projectDir}/conf")
       into "${snappyProductDir}/conf"
+    }
+    copy {
+      from("${examplesProject.projectDir}/quickstart")
+      into "${snappyProductDir}/quickstart"
     }
 
     def sparkR = "${project(':snappy-spark').projectDir}/R/lib/SparkR"
@@ -396,9 +407,111 @@ def copyTestsCommonResources(def bdir) {
   }
 }
 
+def runScript(def execName, def param) {
+def stdout = new ByteArrayOutputStream()
+    exec{
+      executable "${execName}"
+      args  (param)
+      standardOutput = stdout;
+    }
+  return "$stdout"
+}
+
+def runSQLScript(def fileName) {
+  println("Executing ${fileName}")
+  def queryoutput = runScript("${snappyProductDir}/bin/snappy-shell",
+          ["run", "-file=${snappyProductDir}/quickstart/scripts/${fileName}"]);
+  println "${queryoutput}"
+  if (queryoutput.contains("ERROR") || queryoutput.contains("Failed")) {
+    throw new GradleException("Failed to run ${fileName}")
+  }
+}
+
+task runQuickstart {
+  mustRunAfter product
+  def exampleArchiveName = "quickstart-${version}.jar"
+  doLast {
+    try {
+      def startoutput = runScript("${snappyProductDir}/sbin/snappy-start-all.sh", []);
+      println "${startoutput}"
+      if (!startoutput.contains("Distributed system now has 4 members")) {
+        throw new GradleException("Failed to start Snappy cluster")
+      }
+      runSQLScript("create_and_load_column_table.sql")
+
+      runSQLScript("create_and_load_row_table.sql")
+
+      runSQLScript("status_queries.sql")
+
+      runSQLScript("olap_queries.sql")
+
+      runSQLScript("oltp_queries.sql")
+
+      runSQLScript("olap_queries.sql")
+
+      def startSparkResult = runScript("${snappyProductDir}/sbin/start-all.sh", [])
+      println "${startSparkResult}"
+
+      def airlineappresult = runScript("${snappyProductDir}/bin/spark-submit",
+              ["--class", "io.snappydata.examples.AirlineDataSparkApp", "--master", "spark://localhost:7077",
+               "--conf", "snappydata.store.locators=localhost:10334", "--conf", "spark.ui.port=4041",
+               "${snappyProductDir}/lib/${exampleArchiveName}"]);
+
+      println "${airlineappresult}"
+      if (airlineappresult.toLowerCase().contains("exception")) {
+        throw new GradleException("Failed to submit AirlineDataSparkApp")
+      }
+
+      def submitjobairline = runScript("${snappyProductDir}/bin/snappy-job.sh",
+              ["submit", "--lead", "localhost:8090", "--app-name", "myjob",
+               "--class", "io.snappydata.examples.AirlineDataJob", "--app-jar",
+               "${snappyProductDir}/lib/${exampleArchiveName}"]);
+
+      println "${submitjobairline}"
+
+      def json = new JsonSlurper().parseText("${submitjobairline}".substring(2))
+      def jobid = ""
+      json.each {
+        k, v ->
+          if (k == "result") {
+            if (v instanceof groovy.json.internal.LazyMap) {
+              jobid = v.get("jobId")
+            }
+          }
+      }
+
+      def status = "RUNNING"
+      while (status == "RUNNING") {
+        Thread.sleep(3000)
+        def statusjobairline = runScript("${snappyProductDir}/bin/snappy-job.sh",
+                ["status", "--lead", "localhost:8090", "--job-id", "${jobid}"]);
+        println "${statusjobairline}"
+
+        def statusjson = new JsonSlurper().parseText("${statusjobairline}")
+        statusjson.each {
+          k, v ->
+            if (k == "status") {
+              println("Current status of job: " + v)
+              status = v
+            }
+        }
+      }
+      if (status == "ERROR") {
+        throw new GradleException("Failed to submit queries")
+      }
+
+
+    } finally {
+      println runScript("${snappyProductDir}/sbin/snappy-stop-all.sh", []);
+      println runScript("${snappyProductDir}/sbin/stop-all.sh", []);
+    }
+  }
+}
+
 task copyResourcesAll << {
   copyTestsCommonResources(project(":snappy-core_${scalaBinaryVersion}").buildDir)
   copyTestsCommonResources(project(":snappy-tools_${scalaBinaryVersion}").buildDir)
+  copyTestsCommonResources(project(":snappy-aqp").buildDir)
   copyTestsCommonResources(project(':snappy-dunits').buildDir)
 }
 
@@ -411,7 +524,7 @@ task buildAll {
   mustRunAfter cleanAll
 }
 task checkAll {
-  dependsOn ":snappy-core_${scalaBinaryVersion}:check", ":snappy-tools_${scalaBinaryVersion}:check", ':snappy-dunits:test'
+  dependsOn  ":snappy-core_${scalaBinaryVersion}:check", ":snappy-tools_${scalaBinaryVersion}:check", ':snappy-aqp:check', ':snappy-dunits:test'
   if (project.hasProperty('spark')) {
     dependsOn project(':snappy-spark').getTasksByName('check', true).collect { it.path }
   }
@@ -419,5 +532,5 @@ task checkAll {
   mustRunAfter product
 }
 task precheckin {
-  dependsOn cleanAll, buildAll, product, checkAll
+  dependsOn cleanAll, buildAll, product, checkAll, runQuickstart
 }
